# Tag-n-Ride

./: .replit  CLAUDE.md  README.md  design_guidelines.json  pyproject.toml  replit.md  server-1.py
.emergent/: emergent.yml
admin/: API.ts  Package.json  Tailwind.config.ts  Utils.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
admin/app/: globals.css  layout.tsx  manifest.json  page.tsx  providers.tsx
admin/components/: DangerPinModal.tsx  ThemeToggle.tsx
admin/lib/: api.ts  auth.ts  hooks.ts  useAlertEscalation.ts  utils.ts
admin/public/: sw.js
backend/: .dockerignore  Dockerfile  requirements.txt  server (2).py  server-1 (1).py  server-1 (10).py  server-1 (3).py  server-1 (5).py  server-1 (6).py  server-1 (8).py  server-1 (9).py  server.py
backend/tests/: test_tagnride_backend.py
company-docs/: README.md
company-docs/01-legal-incorporation/: Co-Founder-Agreement.md  MOI-Memorandum-of-Incorporation.md  Shareholders-Agreement.md
company-docs/02-equity-and-shares/: ESOP-Employee-Share-Option-Plan.md  Option-Grant-Letter-Template.md
company-docs/03-investor-documents/: Investor-Rights-Agreement.md  SAFE-Note.md  Term-Sheet.md
company-docs/04-hr-documents/: Disciplinary-Hearing-Notice.md  Employee-Handbook.md  Employment-Certificate.md  Employment-Contract-Standard.md  Final-Warning-Letter.md  IP-Assignment-Agreement.md  Job-Description-Template.md  NDA-Confidentiality-Agreement.md  (+2 more)
frontend/: app.json  package-lock.json  package.json
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json
(+226 files in other folders)
