[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "mongomock-motor>=0.0.36",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
